--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.2",
     "mdb-react-ui-kit": "^7.1.0",
+    "mdbreact": "^5.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
